--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -18,7 +18,7 @@ $colour-text: #fff;
     margin: 25px;
 }
 
-.porfolio-cards {
+#porfolio-cards {
     margin: calc($base-grid * 2) auto calc($base-grid * 5);
     display: flex;
     flex-wrap: wrap;
